required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- fix memory leak on tiled vector polygons

- fix segfault with marker symbols on short lines (#3823)

- wms_getmap_formatlist causes first defined outputformat to be returned by getmap (#3826)

- fix building of mapcluster.c when OGR support is disabled

- fix some valgrind found memory leaks (offset symbols, and gd io contexts)

- skip marker symbol with no defined SYMBOL (caused some memory leaks with
  uninitialized vector points)

- fix crash in GD lines with floating point dash patterns (#3823)

- Check renderer before using it when calculating label size (#3822)

- allow palette file path to be relative to mapfile (#2115)

- use supplied offset for brushed lines (#3825, #3792)

- fix division by 0 error in bar charts for some ill-defined cases (#3218)

- add GAP, POSITION and CAPS/JOINS to mapfile writer (#3797)

- fix GEOMTRANSFORM rotation orientation for vector symbols (#3802)

- GD Driver broken in FastCGI (#3813)

- configure: look for libexslt.so under lib64 as well

- Coding style and formatting fixes (#3819, #3820, #3821, and more)

- More improvements to OpenGL error handling (#3791)

Version 6.0.0-beta5 (2011-04-06)
--------------------------------

- Fix setting of top-level mapObj member variables in PHP MapScript (#3815)

- More robust OpenGL context creation on older video cards and drivers (#3791)

- Allow users to set the maximum number of vector features to be drawn (#3739)

- Fixed FCGI on Windows problem related to lexer (#3812)

- KML: Add ows/kml_exclude_items (#3560)

- Removed all refs left to MS_SYMBOL_CARTOLINE (#3798)
