@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- fix segmentation fault with transparent layers containing symbols (#3834)
+
 - fix memory leak on tiled vector polygons
 
 - fix segfault with marker symbols on short lines (#3823)
